force-app/main/default/objects/Loan__c/fields/CIBIL_Score__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Score__c</fullName>
    <formula>New_Customer__r.CIBIL_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIBIL Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>