force-app/main/default/objects/Loan__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Degree</label>
    <type>Checkbox</type>
</CustomField>