force-app/main/default/objects/Loan__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GMATS</fullName>
            </value>
            <value>
                <fullName>GRE</fullName>
            </value>
            <value>
                <fullName>JEE</fullName>
            </value>
            <value>
                <fullName>IELTS</fullName>
                <isActive>false</isActive>
                <label>IELTS</label>
            </value>
            <value>
                <fullName>OJEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>