force-app/main/default/objects/Loan__c/fields/Loan_status__c.field-meta.xml
<CustomField>
    <fullName>Loan_status__c</fullName>
    <label>Loan status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Auto-Rejected-old Model</fullName>
            </value>
            <value>
                <fullName>Property Rejected-Old building</fullName>
            </value>
            <value>
                <fullName>Pl-Rejected-Low salary</fullName>
            </value>
            <value>
                <fullName>Underprocess</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>