force-app/main/default/objects/Loan__c/fields/Matric__c.field-meta.xml
<CustomField>
    <fullName>Matric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matric</label>
    <type>Checkbox</type>
</CustomField>