force-app/main/default/objects/Loan__c/fields/New_Customer__c.field-meta.xml
<CustomField>
    <fullName>New_Customer__c</fullName>
    <label>New Customer</label>
    <referenceTo>New_Customer__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>