force-app/main/default/objects/Loan__c/fields/Performance_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Performance_Invoice__c</fullName>
    <label>Performance Invoice</label>
    <length>25</length>
    <type>Text</type>
</CustomField>