force-app/main/default/objects/Loan__c/fields/PlusTwo__c.field-meta.xml
<CustomField>
    <fullName>PlusTwo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PlusTwo</label>
    <type>Checkbox</type>
</CustomField>