force-app/main/default/objects/Loan__c/fields/Post_Graduate__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Graduate</label>
    <type>Checkbox</type>
</CustomField>