force-app/main/default/objects/Loan__c/fields/Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee__c</fullName>
    <formula>IF( RecordType.DeveloperName == &quot;Housing_Loan&quot;, ((Amount__c  / 100)*1), IF( RecordType.DeveloperName == &quot;Auto_Loan&quot;, ((Amount__c  / 100)*2), IF( RecordType.DeveloperName == &quot;Personal_Loan&quot;, ((Amount__c  / 100)*3), 0)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>