force-app/main/default/objects/Loan__c/fields/Property_Permission__c.field-meta.xml
<CustomField>
    <fullName>Property_Permission__c</fullName>
    <label>Property Permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GHMC</fullName>
            </value>
            <value>
                <fullName>PATTA</fullName>
            </value>
            <value>
                <fullName>Huda Layout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>