force-app/main/default/objects/Loan__c/fields/Purposed_Loan__c.field-meta.xml
<CustomField>
    <fullName>Purposed_Loan__c</fullName>
    <label>Purposed Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marraige</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Purchase of Computers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>