force-app/main/default/objects/Loan__c/fields/Rejected_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Notes__c</fullName>
    <label>Rejected Notes</label>
    <length>25</length>
    <type>Text</type>
</CustomField>