force-app/main/default/objects/Loan__c/fields/Resident_Type__c.field-meta.xml
<CustomField>
    <fullName>Resident_Type__c</fullName>
    <label>Resident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INDIAN</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>