force-app/main/default/objects/Loan__c/fields/SQft__c.field-meta.xml
<CustomField>
    <fullName>SQft__c</fullName>
    <label>SQft</label>
    <length>18</length>
    <type>Text</type>
</CustomField>