force-app/main/default/objects/Loan__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KA</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
            </value>
            <value>
                <fullName>SYA</fullName>
            </value>
            <value>
                <fullName>TRI</fullName>
            </value>
            <value>
                <fullName>ADILED</fullName>
            </value>
            <value>
                <fullName>MELBOURN</fullName>
            </value>
            <value>
                <fullName>SYDNY</fullName>
            </value>
            <value>
                <fullName>BRISBAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>