force-app/main/default/objects/Loan__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abroad</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>