force-app/main/default/objects/Loan__c/fields/Vehicle_Types__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Types__c</fullName>
    <label>Vehicle Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>