force-app/main/default/objects/Loan__c/recordTypes/Auto_Loan.recordType-meta.xml
<RecordType>
    <fullName>Auto_Loan</fullName>
    <active>true</active>
    <label>Auto Loan</label>
</RecordType>