force-app/main/default/objects/Loan__c/recordTypes/Gold_Loan.recordType-meta.xml
<RecordType>
    <fullName>Gold_Loan</fullName>
    <active>true</active>
    <label>Gold Loan</label>
</RecordType>