force-app/main/default/objects/Loan__c/recordTypes/Housing_Loan.recordType-meta.xml
<RecordType>
    <fullName>Housing_Loan</fullName>
    <active>true</active>
    <label>Housing Loan</label>
</RecordType>