force-app/main/default/objects/Loan__c/validationRules/Ed1.validationRule-meta.xml
<ValidationRule>
    <fullName>Ed1</fullName>
    <active>true</active>
    <errorConditionFormula>( Matric__c  == false  &amp;&amp;   PlusTwo__c  == true)</errorConditionFormula>
    <errorMessage>Please Select Matric</errorMessage>
</ValidationRule>