force-app/main/default/objects/Loan__c/validationRules/Ed2.validationRule-meta.xml
<ValidationRule>
    <fullName>Ed2</fullName>
    <active>true</active>
    <errorConditionFormula>PlusTwo__c == false &amp;&amp; Degree__c == true</errorConditionFormula>
    <errorMessage>Please select Matric and Plus Two</errorMessage>
</ValidationRule>