force-app/main/default/objects/Loan__c/validationRules/Ed3.validationRule-meta.xml
<ValidationRule>
    <fullName>Ed3</fullName>
    <active>true</active>
    <errorConditionFormula>Degree__c == false &amp;&amp; Post_Graduate__c == true</errorConditionFormula>
    <errorMessage>please select Matric,Plus Two and Degree</errorMessage>
</ValidationRule>