force-app/main/default/objects/Loan__c/validationRules/rule1.validationRule-meta.xml
<ValidationRule>
    <fullName>rule1</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Loan_status__c , &quot;Rejected&quot;) &amp;&amp;  ISBLANK( Rejected_Notes__c )</errorConditionFormula>
    <errorMessage>Rejected notes can&apos;t be empty</errorMessage>
</ValidationRule>