force-app/main/default/objects/Loan__c/validationRules/rule2.validationRule-meta.xml
<ValidationRule>
    <fullName>rule2</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.DeveloperName == &quot;Housing_Loan&quot;) &amp;&amp;  (ISBLANK( ROI__c ))</errorConditionFormula>
    <errorDisplayField>ROI__c</errorDisplayField>
    <errorMessage>This field is required.</errorMessage>
</ValidationRule>