force-app/main/default/objects/Loan__c/validationRules/rule3.validationRule-meta.xml
<ValidationRule>
    <fullName>rule3</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Property_Type__c , &quot;Residential&quot; )) &amp;&amp; ( ISBLANK( SQft__c ) )</errorConditionFormula>
    <errorMessage>Square fit is reqired</errorMessage>
</ValidationRule>